turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:52: error: not found: value R
					rule (etat) (couleur) (1) = R
                                                                    ^Turmite:55: error: not found: value N
					rule (etat) (couleur) (1) = N
                                                                    ^